# learning-rust

./: .gitignore  Cargo.toml  README.md  learning-rust.code-workspace
Chapter1/hello_world/: Cargo.toml
Chapter10/: Cargo.toml
Chapter10/src/: generics.rs  lifetimes.rs  main.rs  trait_example.rs
Chapter11/: notes.md
Chapter11/adder/: Cargo.toml
Chapter12/: Cargo.toml
Chapter12/src/: lib.rs  main.rs
Chapter13/: Cargo.toml
Chapter13/src/: iterators.rs  main.rs  promotion.rs  shoe.rs
Chapter14/: notes.md
Chapter15/: Cargo.toml
Chapter15/src/: box_examples.rs  graph.rs  main.rs  memory_leak.rs  rc_examples.rs  refcell_examples.rs
Chapter16/: Cargo.toml
Chapter16/src/: main.rs  message_passing.rs  shared_state.rs  thread.rs
Chapter17/: Cargo.toml
Chapter17/src/: encapsulation.rs  inheritence.rs  main.rs  state_pattern.rs  state_pattern_rust.rs
Chapter18/: Cargo.toml
Chapter2/: Cargo.toml
Chapter2/src/: main.rs
Chapter3/: README.md
Chapter3/examples/: Cargo.toml
Chapter3/examples/src/: int_overflow.rs  main.rs  shadowing.rs  variables.rs
Chapter4/: Cargo.toml  notes.md
Chapter4/src/: first_word.rs  main.rs
Chapter5/: Cargo.toml  notes.md
Chapter5/src/: main.rs  rectangle.rs
Chapter6/: Cargo.toml  notes.md
Chapter6/src/: ip.rs  main.rs  option.rs
Chapter7/restaurant/: Cargo.toml
Chapter7/restaurant/src/: lib.rs
Chapter8/: Cargo.toml
Chapter8/src/: hashmaps.rs  main.rs  strings.rs  vector.rs
Chapter9/: Cargo.toml
Chapter9/src/: main.rs  recoverable.rs
