[workspace]
members = [
    "Chapter1/hello_cargo",
    "Chapter1/hello_world", "Chapter10", "Chapter11/adder",
    "Chapter3/examples"
, "Chapter4", "Chapter5", "Chapter6", "Chapter7/restaurant", "Chapter8", "Chapter9"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Prateek Singh Rathore <prateek.singh.rathore@gmail.com"]
description = "Learning Rust projects"
license = "MIT"
