[workspace]
members = [
    "Chapter1/hello_cargo",
    "Chapter1/hello_world", 
    "Chapter2",
    "Chapter3/examples",
    "Chapter4",
    "Chapter5",
    "Chapter6",
    "Chapter7/restaurant",
    "Chapter8",
    "Chapter9",
    "Chapter10", 
    "Chapter12", 
    "Chapter13",
    "Chapter15",
    "Chapter16",
    "Chapter17",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Prateek Singh Rathore <prateek.singh.rathore@gmail.com"]
description = "Learning Rust projects"
license = "MIT"
